@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2016-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/loaders/cdx/cdx.cc: import reaction and mesomery.
+
 2016-01-20  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/scheme.cc: allow missing products in reactions again.
 	* plugins/loaders/cdx/cdx.cc: fix strings encoding while loading.
